--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CV</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-    
-</body>
+    <h1>Мое резюме</h1>
+    </body>
 <script src="./index.js"></script>
 </html>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
