--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-    <h1>Мое резюме</h1>
-    </body>
-<script src="./index.js"></script>
-</html>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
+    <H1>My CV!!!</H1>
+</body>
+</html>
