feat: modify "index.html"

--- a/index.html
+++ b/index.html
@@ -1,1 +1,137 @@
 
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Curriculum Vitae</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,700&family=Roboto:wght@300&display=swap"
+        rel="stylesheet">
+
+    <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+    <header class="header">
+        <div class="container d-flex">
+            <div class="header-logo">
+                <a href="#home" class="logo-link">Kolyada Volodymyr</a>
+            </div>
+            <nav class="header-menu d-flex">
+                <a href="#about" class="menu-link">About</a>
+                <a href="#works" class="menu-link">Works</a>
+                <a href="#contacts" class="menu-link">Contacts</a>
+
+
+            </nav>
+        </div>
+    </header>
+
+    <main>
+
+        <section class="section" id="home">home</section>
+        <div class="section" id="about">
+            <div class="my-foto"><img src="./IMG_0189.jpg" width="360" height="422" alt=""></div>
+            <p>Have solid experience with telecommunication systems (cellular networks).
+                Olso have some basic knowledge in core Java.
+                I am a sportsperson who has achievements in Ukrainian competitions “Iron games” (2012y.) in powerlifting
+                (2 gold medals).
+                As “trainee developer” can repair computers and phones.
+                Have driver license cat.B</p>
+        </div>
+        </section>
+        <section class="section" id="works">
+            <div class="my-works">
+                <h3>Experience:</h3>
+                <br>
+                <p>
+                    <h4>Junuary2021</h4> - current time - Working on creating site for Ukrainian painter using such
+                    technologies as:
+                    HTML5, CSS.
+                </p>
+                <br>
+                <p>
+                    <h4>2017 – Іntertelecom (www.intertelecom.ua)</h4> Head of the Technical Department of using
+                    network.
+                </p>
+                <br>
+                <h4> 2013 – 2017 - Іntertelecom (www.intertelecom.ua)</h4>
+                <p> Position: Base Technical System Engineer</p>
+                <br>
+                <h4> Duties:</h4>
+                <br>
+                <ul>
+                    <li> Using and changes configuration “Lucent-Alcatel”;</li>
+                    <li> Mount electrical equipment;</li>
+                    <li> Detection and elimination of the functionality of equipment;</li>
+                    <li> Emergency services;</li>
+                    <li> Renovation programing</li>
+                    <li> Performing work with increased safety at altitude.</li>
+                </ul>
+                <br>
+                <h4>2012 Cdma Ukraine (www.cdma.ua) ;</h4>
+                <br>
+                <ul>
+                    <li> 2012-2013 – Engineer of the 1 stage Technical department CDMA Ukraine (www.cdma.ua) ;</li>
+                    <li> 2010 - 2012 – Head leader of the Technical department NSS; </li>
+                    <li> 2008 - 2010 – An Engineer of the Technical department CDMA Ukraine (www.cdma.ua) ; </li>
+                    <li> 2006 - 2008 - An Engineer of the Service department CDMA Ukraine (www.cdma.ua) ; </li>
+                </ul>
+                <br>
+
+                <h5>Duties:</h5>
+                <br>
+                <ul>
+                    <li> Huawei M800 equipment, UMG8900, SoftX 3000, BSC6600;</li>
+                    <li> Monitoring and maintenance of control systems. </li>
+                    <li> Preparation of reporting and correction of inconsistencies of work of equipment and services;
+                    </li>
+                    <li> Change of existing and introduction of new voice services; </li>
+                    <li> MSC/HLR operation and maintenance; </li>
+                    <li> Renovation of programing; </li>
+                    <li> Emergency services; </li>
+                    <li> Analysis and identification of problems communication between MSC/MSC, MSC/HLR (CCS No7) ;
+                    </li>
+                    <li> Monitoring and analysis using a service system (PRA); </li>
+                    <li> Mount and start BTS Huawei 3601,3606,3606E (BTS). </li>
+                </ul>
+
+            </div>
+
+        </section>
+        <section class="section" id="contacts">
+            <div class="contacts">
+            <ul>
+                <li>  Phone : +380 98 456-52-52 ; </li>
+                <li>  Date of birth : January 16, 1983 ;
+                <li>  E-mail : valdimarr83@gmail.com ; </li>
+                <li>  GitHub : volodymyr1402 ; </li>
+                <li>  Skype : 0637185717 ; </li>
+
+            </ul>
+        </div>
+        </section>
+
+    </main>
+
+    <footer class="footer">
+        <div class="container d-flex">
+            <p>@COPYRIGHT 2021</p>
+        </div>
+        <div class="git"><a href="https://github.com/volodymyr1402" target="_blank"><img src="./GitHub-Mark-32px.png"
+                    alt="My GitHub"></a></div>
+        <div class="rs-school"><a href="https://rs.school/js/" target="_blank"><img src="./rs_school_js.svg"
+                    alt="My GitHub"></a></div>
+
+    </footer>
+
+
+</body>
+
+</html>
